--- a/src/index.css
+++ b/src/index.css
@@ -1,27 +1,13 @@
 @import-normalize; /* bring in normalize.css styles */
 
 body {
+  background: linear-gradient(to bottom, #1c2748, #5d5959);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  overflow: hidden;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-
-li {
-  list-style: none;
-}
-
-input {
-  outline: none;
-}
-
-button:hover {
-  box-shadow: 2px 3px 5px rgb(11, 102, 187);
+  color: white;
 }
